fix show records button style on mobile

--- a/themes/finna2/less/finna/forms.less
+++ b/themes/finna2/less/finna/forms.less
@@ -236,7 +236,10 @@ button.multiselect {
     }
 }
 
-.btn.show-records {
+.form-cart-email {
+  button.btn.show-records {
     color: @link-color;
     padding-top: 8px;
+    background-color: white;
+  }
 }
